@@ -1,14 +1,14 @@
 package com.quorum.tessera.jaxrs.unixsocket;
 
-import java.util.Collections;
 import java.util.Set;
+import javax.ws.rs.ApplicationPath;
 import javax.ws.rs.core.Application;
 
+@ApplicationPath("/")
 public class SampleApplication extends Application {
 
     @Override
-    public Set<Object> getSingletons() {
-        return Collections.singleton(new SampleResource());
+    public Set<Class<?>> getClasses() {
+        return Set.of(SampleResource.class);
     }
-
 }
