@@ -3,16 +3,14 @@ package com.quorum.tessera.launcher;
 import com.quorum.tessera.config.AppType;
 import com.quorum.tessera.config.Config;
 import com.quorum.tessera.config.ServerConfig;
-import com.quorum.tessera.config.apps.TesseraAppFactory;
+import com.quorum.tessera.config.apps.TesseraApp;
 import com.quorum.tessera.recovery.RecoveryFactory;
 import com.quorum.tessera.server.TesseraServer;
 import com.quorum.tessera.server.TesseraServerFactory;
 import org.slf4j.Logger;
 import org.slf4j.LoggerFactory;
 
-import java.util.Collections;
-import java.util.List;
-import java.util.Objects;
+import java.util.*;
 import java.util.stream.Collectors;
 
 public enum Launcher {
@@ -20,22 +18,31 @@ public enum Launcher {
         @Override
         public void launchServer(Config config) throws Exception {
             LOGGER.debug("Creating servers");
+            config.getServerConfigs().forEach(c -> {
+                LOGGER.debug("Creating server for {}",c);
+            });
+
             final List<TesseraServer> servers =
                 config.getServerConfigs().stream()
                     .filter(server -> !AppType.ENCLAVE.equals(server.getApp()))
                     .map(
                         conf -> {
                             LOGGER.debug("Creating app from {}", conf);
-                            Object app =
-                                TesseraAppFactory.create(conf.getCommunicationType(), conf.getApp())
-                                    .orElseThrow(
-                                        () ->
-                                            new IllegalStateException(
-                                                "Cant create app for "
-                                                    + conf.getApp()));
+
+                            ServiceLoader.load(TesseraApp.class).stream().forEach(app -> {
+                                LOGGER.debug("Loaded app {}",app.type());
+                            });
+
+                            Object app = ServiceLoader.load(TesseraApp.class).stream()
+
+                                .map(p -> p.get())
+                                .filter(a -> a.getAppType() == conf.getApp())
+                                .filter(a -> a.getCommunicationType() == conf.getCommunicationType())
+                                .findFirst()
+                                .orElseThrow(() -> new IllegalStateException("Cant create app for "+ conf.getApp()));
+
                             LOGGER.debug("Created APP {} from {}", app, conf);
-                            return TesseraServerFactory.create(conf.getCommunicationType())
-                                .createServer(conf, Collections.singleton(app));
+                            return TesseraServerFactory.create(conf.getCommunicationType()).createServer(conf, Set.of(app));
                         })
                     .filter(Objects::nonNull)
                     .collect(Collectors.toList());
@@ -68,9 +75,13 @@ public enum Launcher {
 
             final ServerConfig recoveryP2PServer = config.getP2PServerConfig();
 
-            final Object app =
-                TesseraAppFactory.create(recoveryP2PServer.getCommunicationType(), recoveryP2PServer.getApp())
-                    .orElseThrow(
+            final Object app = ServiceLoader.load(TesseraApp.class).stream()
+                .map(a -> a.get())
+                .peek(o -> LOGGER.debug("Found app {}",o))
+                .filter(a -> a.getCommunicationType() == recoveryP2PServer.getCommunicationType())
+                .filter(a -> a.getAppType() == recoveryP2PServer.getApp())
+
+                .findFirst().orElseThrow(
                         () ->
                             new IllegalStateException(
                                 "Cant create app for " + recoveryP2PServer.getApp()));
